--- a/src/main/webapp/baja.html
+++ b/src/main/webapp/baja.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Baja</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,12 +22,25 @@
 		</table>
 	</header>
 	<!-- #2 -->
-	<nav>
-		<a href="index.html">Inicio</a>
-		<a href="alta.html">Alta</a>
-		<a href="baja.html">Baja</a>
-		<a href="consulta.html">Consulta</a>
-	</nav>
-	BAJA
+	<section>
+		<nav>
+			<a href="index.html">Inicio</a>
+			<a href="alta.html">Alta</a>
+			<a href="baja.html">Baja</a>
+			<a href="consulta.html">Consulta</a>
+		</nav>
+		
+		<form>
+			<label for="nombre">Selecciona tu nombre para dar de baja:</label>
+				<select name="nombre" id="nombre">
+	       		 <option value="p1">P1</option>
+	       		 <option value="p2">P2</option>
+	       		 <option value="p3">P3</option>
+	    		</select>
+	
+	   			 <button type="submit">Enviar</button>
+		</form>
+	</section>
+	
 </body>
 </html>
