--- a/src/main/webapp/baja.html
+++ b/src/main/webapp/baja.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Baja</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="baja.css">
 </head>
 <body>
 <!-- #1 -->
@@ -31,7 +32,7 @@
 		</nav>
 		
 		<form>
-			<label for="nombre">Selecciona tu nombre para dar de baja:</label>
+			<label for="nombre" class="margin-top">Selecciona tu nombre para dar de baja:</label>
 				<select name="nombre" id="nombre">
 	       		 <option value="p1">P1</option>
 	       		 <option value="p2">P2</option>
