--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Mi primera pagina Web</title>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="alta.css">
 </head>
 <body>
 <!-- #1 -->
@@ -22,17 +23,16 @@
 		</table>
 	</header>
 	
-<!-- #2 -->
-	<nav>
+<!-- #3 -->
+	<section>
+	<nav class="margin-bottom">
 		<a href="index.html">Inicio</a>
 		<a href="alta.html">Alta</a>
 		<a href="baja.html">Baja</a>
 		<a href="consulta.html">Consulta</a>
 	</nav>
-
-<!-- #3 -->
-	<section>
 		<h2>Inicio</h2>
+		
 		<table>
 			<tbody>
 				<tr>
