--- a/src/main/webapp/alta.html
+++ b/src/main/webapp/alta.html
@@ -5,7 +5,35 @@
 <title>Alta</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="alta.css">
+	<script>
+	function validar() {
+		var numero, letra, letras, formato;
+		letras = 'TRWAGMYFPDXBNJZSQVHLCKET';
+		formato = /^\d{8}[a-zA-Z]$/;
+		dni = document.forms["formulario"]["dnir"].value;
+	
+			if(formato.test(dni)){
+				numero = dni.substr(0, dni.length-1);
+				letra = dni.substr(dni.length-1, 1).toUpperCase();
+				numero = numero % 23;
+				letras = letras.substring(numero, numero+1);
+	
+				if (letras != letra) {
+		    		alert("Letra errónea");
+		    		return false;
+				} else {
+		    		return true;
+				}
+			} else {
+				alert("Formato erróneo (debe ser 8 números y una letra)");
+				return false;
+			}
+	}
+	
+	</script>
+
 </head>
+
 <body>
 
 	<header>
@@ -23,56 +51,30 @@
 		</table>
 	</header>
 	
-	<nav>
-		<a href="index.html">Inicio</a>
-		<a href="alta.html">Alta</a>
-		<a href="baja.html">Baja</a>
-		<a href="consulta.html">Consulta</a>
-	</nav>
-	
 	<section> 
+		<nav class="margin-bottom">
+			<a href="index.html">Inicio</a>
+			<a href="alta.html">Alta</a>
+			<a href="baja.html">Baja</a>
+			<a href="consulta.html">Consulta</a>
+		</nav>
 		<h2>Alta</h2>
 	
-		<form name="formulario" onsubmit="return validar()">
+		<form name="formulario" method="post" action="alta.html" onsubmit="validar()">
 	
 		 	<label>Nombre:</label>
-     		<input type="text" name="nombre"> <br><br>
+     		<input type="text" name="nombre">
 	 
 	 		<label>Apellido:</label>
-     		<input type="text" name="apellido"><br><br>
+     		<input type="text" name="apellido">
 	
 	 		<label>DNI:</label>
-     		<input type="text" name="dni" id="dni"><br><br>
+     		<input type="text" name="dni" id="dni">
      
-			<input type="submit" name="Submit" id="Submit"><br><br>
-	 
-			<script type="text/javascript">
-		 			function validar() {
-			   			var numero, letra, letras, formato;
-			    		letras = 'TRWAGMYFPDXBNJZSQVHLCKET';
-			    		formato = /^\d{8}[a-zA-Z]$/;
-			    		dni = document.forms["formulario"]["dnir"].value;
-
-			    		if(formato.test(dni)){
-			        		numero = dni.substr(0, dni.length-1);
-			        		letra = dni.substr(dni.length-1, 1).toUpperCase();
-			        		numero = numero % 23;
-			        		letras = letras.substring(numero, numero+1);
-
-			        		if (letras != letra) {
-			            		alert("Letra errónea");
-			            		return false;
-			        		} else {
-			            		return true;
-			        		}
-			    		} else {
-			        		alert("Formato erróneo (debe ser 8 números y una letra)");
-			        		return false;
-			    		}
-					}
-	 			</script>
+			<input type="submit" value="submit">
 			</form>
 	</section>
+	
 	<footer> 
 		<p>Isabel Hernansáez Calín Enviar a: <a href="mailto:isabel.hcalin@alumnos.upm.es">isabel.hcalin@alumnos.upm.es</a></p>
 	</footer>
