--- a/src/main/webapp/baja.html
+++ b/src/main/webapp/baja.html
@@ -5,6 +5,7 @@
 <title>Baja</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="baja.css">
+<link rel="stylesheet" href="alta.css">
 </head>
 <body>
 <!-- #1 -->
@@ -24,24 +25,26 @@
 	</header>
 	<!-- #2 -->
 	<section>
-		<nav>
+		<nav class="margin-bottom">
 			<a href="index.html">Inicio</a>
 			<a href="alta.html">Alta</a>
 			<a href="baja.html">Baja</a>
 			<a href="consulta.html">Consulta</a>
 		</nav>
-		
-		<form>
-			<label for="nombre" class="margin-top">Selecciona tu nombre para dar de baja:</label>
-				<select name="nombre" id="nombre">
-	       		 <option value="p1">P1</option>
-	       		 <option value="p2">P2</option>
-	       		 <option value="p3">P3</option>
-	    		</select>
-	
-	   			 <button type="submit">Enviar</button>
+		<h2>Baja</h2>
+		<form method="post" action="baja.html">
+			<select>
+				<option value="p1">P1</option>
+		        <option value="p2">P2</option>
+		       	<option value="p3">P3</option>
+			</select><br>
+			<input type="submit" value="submit">
+	  
 		</form>
 	</section>
+	<footer> 
+		<p>Isabel Hernansáez Calín Enviar a: <a href="mailto:isabel.hcalin@alumnos.upm.es">isabel.hcalin@alumnos.upm.es</a></p>
+	</footer>
 	
 </body>
 </html>
